infra/k8s/overlays/dev/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-guessr-frontend
spec:
  template:
    spec:
      containers:
      - name: frontend
        image: ghcr.io/robin-vidal/game-guessr/frontend:develop
