infra/k8s/overlays/dev/pgadmin-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  template:
    spec:
