infra/k8s/overlays/dev/gateway-gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: game-guessr-gke-gateway
spec:
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "dev.game-guessr.robin-vidal.com"
    allowedRoutes:
      namespaces:
        from: Same
  - name: http-subdomains
    protocol: HTTP
    port: 80
    hostname: "*.dev.game-guessr.robin-vidal.com"
    allowedRoutes:
      namespaces:
        from: Same
