infra/k8s/overlays/dev/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: game-guessr-gke-gateway
  annotations:
    networking.gke.io/certmap: game-guessr-cert-maps
    networking.gke.io/static-ip: gkegw1-gaxb-game-guessr-de-game-guessr-gke-gateway-jw3ywqh5o781
spec:
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "dev.game-guessr.robin-vidal.com"
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "dev.game-guessr.robin-vidal.com"
    allowedRoutes:
      namespaces:
        from: Same
