infra/k8s/overlays/dev/frontend-httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: game-guessr-frontend
spec:
  parentRefs:
  - name: game-guessr-gke-gateway-dev
    namespace: game-guessr-dev
  rules:
  - backendRefs:
    - name: game-guessr-frontend-dev
      port: 80
